@@ -8,12 +8,16 @@ import com.sendgrid.helpers.mail.Mail;
 import com.sendgrid.helpers.mail.objects.Attachments;
 import com.sendgrid.helpers.mail.objects.Content;
 import com.sendgrid.helpers.mail.objects.Email;
+import org.ciopecalina.invoicingapp.models.Invoice;
+import org.ciopecalina.invoicingapp.models.User;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Base64;
 
 @Service
@@ -21,26 +25,45 @@ public class SendGridService {
     @Value("${sendgrid.SENDGRID_API_KEY}")
     private String SENDGRID_API_KEY;
 
-    public void sendEmail(String fromStr, String toStr, String subjectStr, String contentStr, String filePath) throws IOException {
-        Email from = new Email(fromStr);
-        Email to = new Email(toStr);
+    @Value("${sendgrid.SENDER}")
+    private String SENDER;
+
+    @Autowired
+    private WordDocumentService wordDocumentService;
+    @Autowired
+    private InvoiceService invoiceService;
+    @Autowired
+    private UserService userService;
+
+    public void sendEmail(Integer id, String toStr) throws IOException {
+        String wordFilePath = wordDocumentService.createDocument(id);
+
+        Invoice invoice = invoiceService.getInvoiceById(id);
+        String series = invoice.getSeries();
+        String no = invoice.getNumber();
+        User client = userService.getUserByName(toStr);
+
+        Email from = new Email(SENDER);
+        String subjectStr = "New invoice " + series + " - " + no;
+
+        String contentStr = "You received a new invoice. Please find the attached file.";
+        Email to = new Email(client.getEmail());
         Content content = new Content("text/plain", contentStr);
+
         Mail mail = new Mail(from, subjectStr, to, content);
 
-        if (filePath != null && !filePath.isEmpty()) {
-            Path file = Path.of(filePath);
-            Attachments attachments = new Attachments();
-            attachments.setFilename(file.getFileName().toString());
-            attachments.setType("application/pdf");
-            attachments.setDisposition("attachment");
-            byte[] attachmentContentBytes = Files.readAllBytes(file);
-            String attachmentContent = Base64.getMimeEncoder().encodeToString(attachmentContentBytes);
-            attachments.setContent(attachmentContent);
-            mail.addAttachments(attachments);
-        }
+        Path file = Paths.get(wordFilePath);
+        Attachments attachments = new Attachments();
+        attachments.setFilename(file.getFileName().toString());
+        attachments.setType("application/vnd.openxmlformats-officedocument.wordprocessingml.document");
+        attachments.setDisposition("attachment");
+
+        byte[] attachmentContentBytes = Files.readAllBytes(file);
+        String attachmentContent = Base64.getMimeEncoder().encodeToString(attachmentContentBytes);
+        attachments.setContent(attachmentContent);
+        mail.addAttachments(attachments);
 
         SendGrid sg = new SendGrid(SENDGRID_API_KEY);
-
         Request request = new Request();
         try {
             request.setMethod(Method.POST);
